--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 2020_Mael_Brocher/code+data/source/wordlists/frwiktionary.txt
+*.pyc
+2020_Mael_Brocher/code+data/source/app/__pycache__/
+2020_Mael_Brocher/code+data/source/env/
+2020_Mael_Brocher/code+data/source/wordninja/__pycache__/
+
